# audio_pipeline

./: .gitignore  Cargo.toml  go.mod
audio_pipeline/: audio.go  drain.go  encoding.go  pipe.go  pipeline.go  source.go
client/: tsconfig.json
client/bap/: app.json  package-lock.json  package.json  tsconfig.json
client/bap/src/: App.tsx
client/bap/src/components/: index.ts  media-actions.tsx  media-grid.tsx  media-tile.tsx  page-header.tsx  playing-bar.tsx
client/bap/src/views/: library.tsx
client/src/: index.tsx
file_server/src/: audio.rs  audio_compression.rs  audio_metadata.rs  audio_source.rs  main.rs  pipeline.rs
ideka/: Cargo.toml
ideka/src/: main.rs
playground/: Cargo.toml
playground/src/: main.rs
server/: .gitignore  Cargo.toml
server/public/: index.json  library.json
server/public/meta/: electric_prince.json
server/src/: audio.rs  fs_provider.rs  gateway.rs  library.rs  main.rs  pipeline.rs  playback.rs  storage.rs
server/src/core/: audio.rs  gateway.rs  mod.rs  provider.rs
server/src/providers/: fs_provider.rs  mod.rs  sine_provider.rs
sources/system_io/: Cargo.toml
sources/system_io/src/: main.rs
