[package]
name = "audio_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
hyper = { version = "0.14", features = ["full"] }
axum = "0.6.18"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = "0.4.0"
anyhow = "1.0.71"
num-traits = "0.2.15"
wav = "1.0.0"
