[package]
name = "audio_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
hyper = { version = "0.14", features = ["full"] }
axum = { version = "0.6.18", features = ["headers"] }
tokio = { version = "1.28.2", features = ["full"] }
symphonia = { version = "0.5.3", features = ["mp3"] }
vorbis_rs = "0.3.0"
hound = "3.5.0"
